clusters/kubenuc/apps/forgejo/manifests/networkpolicy-default-deny-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: forgejo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
